# hronn

./: .gitignore  Cargo.toml  README.md  run_grcov.sh
.github/workflows/: rust.yml
benches/: collision_bench.rs
src/: geo.rs  impls.rs  lib.rs  meshanalyzer.rs  obj.rs  probe.rs  searchpattern.rs  strategyresult.rs  tests.rs  triangulation.rs  util.rs
src/geo/: impls.rs  tests.rs
src/meshanalyzer/: impls.rs
src/probe/: functions.rs  tests.rs
src/searchpattern/: adaptivesamplebuffer.rs  meanderpath.rs  meanderpattern.rs  triangulatepattern.rs  waterlinepattern.rs
src/searchpattern/meanderpath/: tests.rs
src/strategyresult/: impls.rs
src/triangulation/: impls.rs  tests.rs
tests/: tests.rs
