[package]
name = "hronn"
version = "0.3.0"
edition = "2021"
description = "An experimental CNC toolpath generator"
readme = "README.md"
repository = "https://github.com/eadf/hronn"
license = "AGPL-3.0-or-later"

[dependencies]
vector-traits = { version = "0.3.2", features = ["glam"] }
linestring = "0.12.0"
krakel = {version = "0.2.1", features = ["glam"]}
thiserror = "1.0.50"
vob="3.0.3"
rayon = "1.8.0"
itertools = "0.12.0"
smallvec = "1.11.2"
spade = "2.3.1"

[features]
default = ["glam"]
glam = ["vector-traits/glam"] # nothing will work without this at the moment

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "collision_bench"
harness = false